--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <script src="https://kit.fontawesome.com/473d269aa9.js" crossorigin="anonymous"></script>
+  <title>Platzi-Conf-Merch</title>
 </head>
 
 <body>
