--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/473d269aa9.js" crossorigin="anonymous"></script>
   <title>Platzi-Conf-Merch</title>
+  <link rel="manifest" href="/manifest.json">
 </head>
 
 <body>
   <div id="app"></div>
 </body>
+<script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', function () {
+      navigator.serviceWorker.register('service-worker.js').then(function (registration) {
+        console.log('ServiceWorker registration successful with scope: ', registration.scope);
+      }, function (err) {
+        console.log('ServiceWorker registration failed: ', err);
+      }).catch(function (err) {
+        console.log(err)
+      });
+    });
+  } else {
+    console.log('service worker is not supported');
+  }
+</script>
 
 </html>
