--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://kit.fontawesome.com/473d269aa9.js" crossorigin="anonymous"></script>
+  <meta name="descrption" content="Application to buy merchandising exhibited at the platzi conference">
+  <script src="https://kit.fontawesome.com/473d269aa9.js" crossorigin="anonymous">
+  </script>
   <title>Platzi-Conf-Merch</title>
   <link rel="manifest" href="/manifest.json">
+  <link rel="canonical" href="https://platzi-store-merch-2c4ca.web.app/">
 </head>
 
 <body>
